--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,4 +5,4 @@ set(CMAKE_C_STANDARD 11)
 
 # define debug constant
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DMY_DEBUG")
-add_executable(projectalgo main.c arbre/arbre.c dico/dico.c utils/utils.c utils/utils.h arbre/extras.c)
+add_executable(projectalgo main.c arbre/arbre.c dico/dico.c utils/utils.c utils/utils.h arbre/extras.c dico/extras.c dico/extras.c)
